--- a/_config.yml
+++ b/_config.yml
@@ -63,8 +63,8 @@ analytics:
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
-    id: # fill in your Umami ID
-    domain: # fill in your Umami domain
+    id: d48dbb44-27c4-49ff-9bca-4c8c73b9057e
+    domain: umami-f0s80oskw4ok44g0ks0s8sw0.5.189.158.61.sslip.io
   matomo:
     id: # fill in your Matomo ID
     domain: # fill in your Matomo domain
