--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ analytics:
     id: # fill in your GoatCounter ID
   umami:
     id: d48dbb44-27c4-49ff-9bca-4c8c73b9057e
-    domain: umami-f0s80oskw4ok44g0ks0s8sw0.5.189.158.61.sslip.io
+    domain: "http://umami-f0s80oskw4ok44g0ks0s8sw0.5.189.158.61.sslip.io"
   matomo:
     id: # fill in your Matomo ID
     domain: # fill in your Matomo domain
